build_log_62.txt
[ 16%] Built target shaders_spirv
[ 18%] Building CXX object CMakeFiles/sisterapp.dir/main.cpp.o
In file included from /run/media/jpereiratrindade/labeco10T/dev/cpp/SisterAppEngine_base_v330/src/core/../ui/ui_layer.h:6,
                 from /run/media/jpereiratrindade/labeco10T/dev/cpp/SisterAppEngine_base_v330/src/core/application.h:17,
                 from /run/media/jpereiratrindade/labeco10T/dev/cpp/SisterAppEngine_base_v330/main.cpp:1:
/run/media/jpereiratrindade/labeco10T/dev/cpp/SisterAppEngine_base_v330/src/core/../ui/../terrain/terrain_map.h:62:11: error: ‘float terrain::TerrainMap::getHeight(int, int) const’ cannot be overloaded with ‘float terrain::TerrainMap::getHeight(int, int) const’
   62 |     float getHeight(int x, int z) const;
      |           ^~~~~~~~~
/run/media/jpereiratrindade/labeco10T/dev/cpp/SisterAppEngine_base_v330/src/core/../ui/../terrain/terrain_map.h:33:11: note: previous declaration ‘float terrain::TerrainMap::getHeight(int, int) const’
   33 |     float getHeight(int x, int y) const;
      |           ^~~~~~~~~
/run/media/jpereiratrindade/labeco10T/dev/cpp/SisterAppEngine_base_v330/src/core/../ui/../terrain/terrain_map.h:63:10: error: ‘void terrain::TerrainMap::setHeight(int, int, float)’ cannot be overloaded with ‘void terrain::TerrainMap::setHeight(int, int, float)’
   63 |     void setHeight(int x, int z, float h);
      |          ^~~~~~~~~
/run/media/jpereiratrindade/labeco10T/dev/cpp/SisterAppEngine_base_v330/src/core/../ui/../terrain/terrain_map.h:34:10: note: previous declaration ‘void terrain::TerrainMap::setHeight(int, int, float)’
   34 |     void setHeight(int x, int y, float h);
      |          ^~~~~~~~~
/run/media/jpereiratrindade/labeco10T/dev/cpp/SisterAppEngine_base_v330/src/core/../ui/../terrain/terrain_map.h:65:11: error: ‘float terrain::TerrainMap::getMoisture(int, int) const’ cannot be overloaded with ‘float terrain::TerrainMap::getMoisture(int, int) const’
   65 |     float getMoisture(int x, int z) const;
      |           ^~~~~~~~~~~
/run/media/jpereiratrindade/labeco10T/dev/cpp/SisterAppEngine_base_v330/src/core/../ui/../terrain/terrain_map.h:36:11: note: previous declaration ‘float terrain::TerrainMap::getMoisture(int, int) const’
   36 |     float getMoisture(int x, int y) const; // Changed z to y
      |           ^~~~~~~~~~~
/run/media/jpereiratrindade/labeco10T/dev/cpp/SisterAppEngine_base_v330/src/core/../ui/../terrain/terrain_map.h:66:10: error: ‘void terrain::TerrainMap::setMoisture(int, int, float)’ cannot be overloaded with ‘void terrain::TerrainMap::setMoisture(int, int, float)’
   66 |     void setMoisture(int x, int z, float m);
      |          ^~~~~~~~~~~
/run/media/jpereiratrindade/labeco10T/dev/cpp/SisterAppEngine_base_v330/src/core/../ui/../terrain/terrain_map.h:37:10: note: previous declaration ‘void terrain::TerrainMap::setMoisture(int, int, float)’
   37 |     void setMoisture(int x, int y, float m); // Changed z to y
      |          ^~~~~~~~~~~
gmake[2]: *** [CMakeFiles/sisterapp.dir/build.make:79: CMakeFiles/sisterapp.dir/main.cpp.o] Error 1
gmake[1]: *** [CMakeFiles/Makefile2:90: CMakeFiles/sisterapp.dir/all] Error 2
gmake: *** [Makefile:91: all] Error 2
